kustomize/overlays/dev/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: app
          resources:
            requests:
              cpu: "50m" # 최소 자원만 할당
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi" # OOM 방지를 위한 최소한의 한계
