kustomize/overlays/dev/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    # 1. 메인 도메인
    - host: playdevops.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-svc
                port:
                  number: 80
    # 2. [추가] Custody 서브도메인
    - host: custody.playdevops.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-svc
                port:
                  number: 80
    # 3. [추가] Datalab 서브도메인
    - host: datalab.playdevops.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-svc
                port:
                  number: 80
